Modified style.css and game.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,14 @@ figcaption {
 }
 .enemy-health-points {
 }
+.defender figure {
+    border: 2px solid #ff0000;
+    background: #333333;
+    color: #ffffff;
+}
+#attack {
+    /* visibility: hidden; */
+}
 #your-character {
 }
 #your-pic {
